Rewriting screen CSS to squash some goofy bugs

--- a/screen.css
+++ b/screen.css
@@ -1,4 +1,4 @@
-@import '//fast.fonts.net/cssapi/d645cd83-c955-4277-a114-11f6324025d4.css';
+@import "//fast.fonts.net/cssapi/d645cd83-c955-4277-a114-11f6324025d4.css";
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -6,31 +6,12 @@
 */
 /* stylelint-disable */
 /* Keep reset CSS to one minified line */
-a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}html{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}html,.reset{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 /* stylelint-enable */
 
 /* Custom Site Styles */
 
 /* ========== Base Styles ========== */
-
-/*
-  Using 19px/1.333 modular scale
-  http://www.modularscale.com/?19&px&1.333&web&text
-*/
-
-/*
-  Fall color palette, taken from
-  http://duoparadigms.com/2013/10/11/10-color-palettes-perfect-autumnfall-season/
-
-  Cream: #F7EFD4
-  Taupe: #D4C2B2
-  Butter: #FADDAF
-  Tea Leaf: #C2BC74
-  Pumpkin: #EB712F
-  Chili: #91371B
-  Coffee: #472C25
-
-*/
 
 html {
   /*
@@ -45,21 +26,15 @@ html {
   -ie-text-size-adjust: 100%;
   text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  font-family: 'Camphor W04', Verdana, Helvetica, Arial, sans-serif;
-
-/*
-  Major Third Modular Scale
-  http://www.modularscale.com/?19&px&1.25
-*/
+  /*
+    Major Third Modular Scale
+    http://www.modularscale.com/?19&px&1.25
+  */
   font-size: 1.1875em; /* 19 / 16px */
   line-height: 1.1578947368em; /* 22 / 19px = 1.1578947368 */
+  font-family: "Camphor W04", Verdana, Helvetica, Arial, sans-serif;
   background-color: #EEE;
   color: #222;
-}
-
-
-header {
-  margin-bottom: 1.1578947368em;
 }
 
 h1,
@@ -68,23 +43,9 @@ h3,
 h4 {
   font-weight: bold;
 }
-h1 {
-
-}
-h2 {
-
-}
-h3 {
-
-}
 
 p {
   padding-bottom: 1.1578947368em;
-}
-.tagline {
-  font-size: 0.8em; /* 15.2px / 19px */
-  line-height: 1.4473684211em; /* 22 / 15.2px = 1.4473684211 */
-  padding-bottom: 1.4473684211em;
 }
 
 ul {
@@ -93,117 +54,57 @@ ul {
 ol {
   list-style-type: decimal;
 }
-ol,ul,li {
+ol, ul, li {
   padding-bottom: 0.5789473684em; /* 11 / 19 = 0.5789473684 */
 }
+
 ol ol,
 ol ul,
 ul ul,
-ol ul {
+ul ol {
   padding-bottom: 0;
 }
-
 
 a {
   color: #666;
 }
-b,
-strong {
+b, strong {
   font-weight: bold;
 }
-cite,
-em,
-i {
+cite, em, i {
   font-style: italic;
 }
 code {
   font-family: Menlo, Monaco, "Droid Sans Mono", Courier, "Courier New", monospace;
 }
 
-small {
-  display: block;
+/* Layout Styles */
+#header {
+  position: relative;
+}
+#header,
+#content,
+#footer {
+  padding-left: 1.7368421053em; /* 33 / 19 (one and a half lead) */
+  padding-right: 1.1578947368em;
 }
 
 
 /* Modular Styles */
-
-header a {
+#header a {
   text-decoration: none;
+}
+#header small {
+  display: block;
+  margin-bottom: 1.1578947368em;
+}
+.tagline {
+  font-size: 0.8em; /* 15.2px / 19px */
+  line-height: 1.4473684211em; /* 22 / 15.2px = 1.4473684211 */
+  padding-bottom: 1.4473684211em;
 }
 .nav,
 .agenda,
 .assignments {
   list-style-type: none;
-}
-
-/* Modular Styles: Block navigation, no JavaScript */
-/*
-#header {
-  padding-top: 10.8em;
-}
-#header small {
-  line-height: 2.4em;
-  position: absolute;
-  top: 0;
-  left: 1.8em;
-}
-.nav {
-  position: absolute;
-  top: 3em;
-  left: 0;
-  width: 100%;
-}
-.nav a {
-  display: block;
-  padding: 0 1.8em;
-}
-*/
-/* Modular Styles: Expandable Navigation */
-/*
-.js #header {
-  padding-top: 1.2em;
-}
-.js #header.is-expanded {
-  padding-top: 10.8em;
-}
-.js #nav-menu {
-  text-transform: uppercase;
-  position: absolute;
-  top: 0;
-  right: 1.8em;
-}
-.js #nav-menu a {
-  display: block;
-  line-height: 2.4em;
-}
-.js .nav {
-  height: 0;
-  opacity: 0;
-  overflow: hidden;
-  text-align: right;
-}
-.js .is-expanded .nav {
-  opacity: 1;
-  height: 10.8em;
-}
-*/
-/*
-  Put the transition propreties under .expandable class to prevent
-  animation on page load, when the .js class is added.
-*/
-/*
-.js .expandable .nav {
-  transition: height, opacity, .3s;
-}
-.js .expandable {
-  transition: padding-top .3s;
-}
-*/
-
-
-@media screen and (min-width: 111111111470px) { /* Just to avoid this query for now */
-  html {
-    font-size: 1.25em; /* 20 / 16px */
-    line-height: 1.2em; /* 24 / 20 */
-  }
 }
